# Huffman-archiver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
exp_files/: bigTXT.txt  bigTXT_decoded.txt
experiments/: analyze.py  results.csv
include/: decode.h  encode.h  error.h  heap.h  huffman_tree.h  tree.h
include/decode/: decode.h
include/encode/: encode.h
include/error/: error.h
include/heap/: heap.h
include/huffman_tree/: huffman_tree.h
include/tree/: tree.h
report/: report.tex
src/: decode.c  encode.c  error.c  heap.c  huffman_tree.c  main.c  tree.c
src/decode/: decode.c
src/encode/: encode.c
src/error/: error.c
src/heap/: heap.c
src/huffman_tree/: huffman_tree.c
src/tree/: tree.c
tests/: encode_decode_test.c  heap_test.c  huffman_test.c  tree_test.c
